-Nav fixed, but issue with alignment when img is an anchor -Intro section adjusted

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -1,8 +1,5 @@
 #img_header {
   width: 50%;
-  display: inline-block;
+  min-width: 200px;
+  max-width: 400px;
 }
-
-/* #img_header img {
-  width: 50%;
-} */
